--- a/src/components/process/process.module.css
+++ b/src/components/process/process.module.css
@@ -53,10 +53,6 @@ h2 {
     margin-right: 5px;
 }
 
-.stepText {
-
-}
-
 @media screen and (max-width: 767px) { 
     .headerContainer {
         text-align: center;
